kubernetes/ingress_test.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-teste
  labels:
    app.kubernetes.io/name: httpd-teste
spec:
  containers:
  - name: httpd-teste
    image: httpd
    ports:
      - containerPort: 80
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-teste-service
spec:
  selector:
    app.kubernetes.io/name: httpd-teste
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-teste-ingress
spec:
  rules:
  - host: teste.whiterun.lucao.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: httpd-teste-service
              port:
                number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/default-backend: fallback-backend
# spec:
#   rules:
#   - host: test.whiterun.lucao.net
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: httpd-teste-service
#             port:
#               number: 80
